frontend/test/should_pass/retype_001.grg
using attrib_model_001;

rule r {
	a:NINT;

	replace {
		b:NFLOAT<a>;
	}
}

