frontend/test/should_fail/retype_014.grg
using attrib_model_001;

rule r {
    a:Node;
    replace {
        :Edge<a>;
    }
}
